# hospital-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/local/: .gitkeep
src/hospital_sim/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/hospital_sim/pipelines/patient_flow/: __init__.py  nodes.py  pipeline.py
