[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital_sim"
version = "0.1.0"
description = "Hospital Patient Flow Simulation for capacity planning and resource optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hospital Analytics Team"}
]
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "simpy>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
hospital-sim = "hospital_sim.__main__:main"

[project.entry-points."kedro.hooks"]

[project.entry-points."kedro.project_commands"]

[tool.kedro]
package_name = "hospital_sim"
project_name = "Hospital Patient Flow Simulation"
kedro_init_version = "0.19.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
